# dojo

./: .gitignore  README.md  install-macos-arm64.sh  load-configuration.sh  save-configuration.sh
ghostty/: config
kitty/: kitty.conf  kitty.conf.bak
nvim/: init.lua  lazy-lock.json
nvim/after/plugin/: gitsigns.lua  harpoon.lua  lsp.lua  telescope.lua  treesitter.lua
nvim/lua/config/: keymaps.lua  lazy.lua  options.lua
nvim/lua/plugins/: colorscheme.lua  dap.lua  gitworktree.lua  harpoon.lua  kitty-scrollback.lua  lsp.lua  neogit.lua  snacks.lua  undotree.lua  vimtex.lua
nvim/lua/thomasian06/: init.lua  lazy.lua  remap.lua
python/: pyproject.toml
shell/: .p10k.zsh  .zprofile  .zsh_aliases  .zshrc  setup-shell-debian.bash  setup-shell-ubuntu.Dockerfile
tmux/: .tmux.conf
